charon/tests/ui/generic-associated-types.out
error: Generic associated types are not supported
 --> tests/ui/generic-associated-types.rs:5:5
  |
5 |     type Item<'a>
  |     ^^^^^^^^^^^^^

error: Item `test_crate::LendingIterator` caused errors; ignoring.
 --> tests/ui/generic-associated-types.rs:4:1
  |
4 | pub trait LendingIterator {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: Found unsupported GAT `Item` when resolving trait `core::marker::Sized<@TraitClause0::Item>`
 --> tests/ui/generic-associated-types.rs:9:5
  |
9 |     fn next<'a>(&'a mut self) -> Option<Self::Item<'a>>;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Error during trait resolution: Found unsupported GAT `Item` when resolving trait `core::marker::Sized<@TraitClause0::Item>`
 --> tests/ui/generic-associated-types.rs:9:5
  |
9 |     fn next<'a>(&'a mut self) -> Option<Self::Item<'a>>;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Found unsupported GAT `Item` when resolving trait `core::marker::Sized<@TraitClause2::Item>`
  --> tests/ui/generic-associated-types.rs:29:28
   |
29 |     while let Some(item) = iter.next() {
   |                            ^^^^^^^^^^^

error: Error during trait resolution: Found unsupported GAT `Item` when resolving trait `core::marker::Sized<@TraitClause2::Item>`
  --> tests/ui/generic-associated-types.rs:29:28
   |
29 |     while let Some(item) = iter.next() {
   |                            ^^^^^^^^^^^

error: Generic associated types are not supported
  --> tests/ui/generic-associated-types.rs:48:9
   |
48 |         type Type<'b>: for<'c> Foo<&'a &'b &'c ()>;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Item `test_crate::lifetimes::Bar` caused errors; ignoring.
  --> tests/ui/generic-associated-types.rs:47:5
   |
47 |     pub trait Bar<'a> {
   |     ^^^^^^^^^^^^^^^^^

error: Found unsupported GAT `Type` when resolving trait `test_crate::lifetimes::Foo<@TraitClause1::Type, &'_ (&'_ (&'_ (())))>`
  --> tests/ui/generic-associated-types.rs:55:9
   |
55 |         x.foo()
   |         ^^^^^^^

error: Error during trait resolution: Found unsupported GAT `Type` when resolving trait `test_crate::lifetimes::Foo<@TraitClause1::Type, &'_ (&'_ (&'_ (())))>`
  --> tests/ui/generic-associated-types.rs:55:9
   |
55 |         x.foo()
   |         ^^^^^^^

error: Found inconsistent generics after translation:
       Mismatched regions:
       target: {impl FnOnce<(&'_ (i32))> for closure<'_0>}
       expected: ['_0, '_1]
            got: ['_0]
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitImplRef
         charon_lib::ast::types::ClosureInfo
         charon_lib::ast::gast::ItemKind
         charon_lib::ast::types::TypeDecl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after translation:
       Mismatched regions:
       target: {impl FnMut<(&'_ (i32))> for closure<'_0>}
       expected: ['_0, '_1]
            got: ['_0]
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitImplRef
         core::option::Option<charon_lib::ast::types::TraitImplRef>
         charon_lib::ast::types::ClosureInfo
         charon_lib::ast::gast::ItemKind
         charon_lib::ast::types::TypeDecl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Mismatched regions:
       target: {impl FnOnce<(&'_ (i32))> for closure<'_0>}
       expected: ['_0, '_1]
            got: ['_0]
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitImplRef
         charon_lib::ast::types::ClosureInfo
         charon_lib::ast::gast::ItemKind
         charon_lib::ast::types::TypeDecl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Mismatched regions:
       target: {impl FnMut<(&'_ (i32))> for closure<'_0>}
       expected: ['_0, '_1]
            got: ['_0]
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitImplRef
         core::option::Option<charon_lib::ast::types::TraitImplRef>
         charon_lib::ast::types::ClosureInfo
         charon_lib::ast::gast::ItemKind
         charon_lib::ast::types::TypeDecl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

ERROR Charon failed to translate this code (14 errors)
